--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ html, body {
 	position: relative;
 
 	width: 100%;
-	height: 480px;
+	height: 580px;
 }
 /* stage -- end*/
 
@@ -28,6 +28,31 @@ html, body {
 	overflow: hidden;
 
 	background-color: #ddd;
+
+	@at-root {
+		.img-figure {
+			width: 320px;
+			height: 360px;
+			margin: 0;
+			padding: 40px;
+
+			background-color: #fff;
+
+			box-sizing: border-box;
+
+			position: absolute;
+		}
+
+		figcaption {
+			text-align: center;
+
+			.img-title {
+				margin: 20px 0 0 0;
+				color: #a7a0a2;
+				font-size: 16px;
+			}
+		}
+	}
 }
 /* image -- end*/
 
