--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,69 +1,106 @@
 @charset "utf-8";
 
 html, body {
-	width: 100%;
-	height: 100%;
-	background-color: #222;
+    width: 100%;
+    height: 100%;
+    background-color: #222;
 }
 .content {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 /* stage -- start*/
 .stage {
-	position: relative;
+    position: relative;
 
-	width: 100%;
-	height: 580px;
+    width: 100%;
+    height: 580px;
 }
 /* stage -- end*/
 
 /* image -- start*/
 .img-sec {
-	position: relative;
+    position: relative;
 
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 
-	background-color: #ddd;
+    background-color: #ddd;
 
-	@at-root {
-		.img-figure {
-			width: 320px;
-			height: 360px;
-			margin: 0;
-			padding: 40px;
+    @at-root {
+        .img-figure {
+            width: 320px;
+            height: 360px;
+            margin: 0;
+            padding: 40px;
 
-			background-color: #fff;
+            background-color: #fff;
 
-			box-sizing: border-box;
+            box-sizing: border-box;
 
-			position: absolute;
-		}
+            position: absolute;
 
-		figcaption {
-			text-align: center;
+            cursor: pointer;
 
-			.img-title {
-				margin: 20px 0 0 0;
-				color: #a7a0a2;
-				font-size: 16px;
-			}
-		}
-	}
+            transform-origin: 0 50% 0;
+            transform-style: preserve-3d;
+            transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+
+            &.is-inverse {
+                transform: translate(320px) rotateY(180deg);
+            }
+
+        }
+
+        figcaption {
+            text-align: center;
+
+            .img-title {
+                margin: 20px 0 0 0;
+                color: #a7a0a2;
+                font-size: 16px;
+            }
+            .img-back {
+                position: absolute;
+                top: 0;
+                left: 0;
+
+                width: 100%;
+                height: 100%;
+                padding: 50px 40px;
+                overflow: auto;
+
+                color: #a7a0a2;
+                font-size: 22px;
+                line-height: 1.25;
+                text-align: left;
+
+                background-color: #fff;
+
+                box-sizing: border-box;
+
+                transform: rotateY(180deg) translateZ(1px);
+                backface-visibility: hidden;
+
+                p {
+                    margin: 0;
+                }
+            }
+        }
+    }
 }
 /* image -- end*/
 
 /* controller -- start*/
 .controller-nav {
-	position: absolute;
-	left: 0;
-	bottom: 30px;
-	z-index: 101;
+    position: absolute;
+    left: 0;
+    bottom: 30px;
+    z-index: 101;
 
-	width: 100%;
-	text-align: center;
+    width: 100%;
+    text-align: center;
 }
 /* controller -- end*/
