--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,14 @@
 @charset "utf-8";
 
+@font-face {
+    font-family: "icons-turn-arrow";
+    src: url("../fonts/icons/turn-arrow.eot") format("embedded-opentype"), 
+        url("../fonts/icons/turn-arrow.woff") format("woff"), 
+        url("../fonts/icons/turn-arrow.ttf") format("truetype"), 
+        url("../fonts/icons/turn-arrow.svg") format("svg");
+
+}
+
 html, body {
     width: 100%;
     height: 100%;
@@ -15,7 +24,7 @@ html, body {
     position: relative;
 
     width: 100%;
-    height: 580px;
+    height: 680px;
 }
 /* stage -- end*/
 
@@ -28,6 +37,8 @@ html, body {
     overflow: hidden;
 
     background-color: #ddd;
+
+    perspective: 1800px;
 
     @at-root {
         .img-figure {
@@ -102,5 +113,44 @@ html, body {
 
     width: 100%;
     text-align: center;
+
+    @at-root {
+        .controller-unit {
+            display: inline-block;
+            width: 30px;
+            height: 30px;
+            margin: 0 5px;
+            text-align: center;
+            vertical-align: middle;
+            cursor: pointer;
+            background-color: #aaa;
+            border-radius: 50%;
+
+            transform: scale(.5);
+            transition: transform .6s ease-in-out, background-color .3s;
+
+            &.is-center {
+                background-color: #888;
+                transform: scale(1);
+
+                &::after {
+                    color: #fff;
+                    font-size: 80%;
+                    line-height: 30px;
+                    font-family: "icons-turn-arrow";
+                    content: "\e600";
+
+                    -webkit-font-smoothing: antialiased;
+                    -moz-osx-font-smoothing: grayscale;
+                }
+
+                &.is-inverse {
+                    background-color: #555;
+
+                    transform: rotateY(180deg);
+                }
+            }
+        }
+    }
 }
 /* controller -- end*/
